# pypi-chart-badge

./: Dockerfile  README.md  action.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
chart/: __init__.py
pypi/: __init__.py
vcs/: __init__.py
