[project]
name = "pypi-chart-badge"
version = "1.4.0"
description = "PyPI Chart Badge Generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido==0.2.1",
    "pandas==2.2.1",
    "plotly==5.24.1",
    "pyaction==0.8.1",
    "requests==2.32.3",
]

[tool.setuptools.packages.find]
exclude = ["test*"]

[project.optional-dependencies]
cli = ["pyaction[cli]==0.8.1"]
